@@ -266,6 +266,25 @@ public class UtilitiesTest extends JAMWikiUnitTest {
 	/**
 	 *
 	 */
+	@Test
+	public void testIsHtmlEntity() throws Throwable {
+		assertFalse("Invalid HTML entity test #1", Utilities.isHtmlEntity(null));
+		assertFalse("Invalid HTML entity test #2", Utilities.isHtmlEntity(""));
+		assertTrue("Invalid HTML entity test #3", Utilities.isHtmlEntity("&amp;"));
+		assertTrue("Invalid HTML entity test #4", Utilities.isHtmlEntity("&#38;"));
+		assertTrue("Invalid HTML entity test #5", Utilities.isHtmlEntity("&#x26;"));
+		assertFalse("Invalid HTML entity test #6", Utilities.isHtmlEntity("&bogus;"));
+		assertTrue("Invalid HTML entity test #7", Utilities.isHtmlEntity("&#x2dc;"));
+		assertTrue("Invalid HTML entity test #8", Utilities.isHtmlEntity("&#x2DC;"));
+		assertFalse("Invalid HTML entity test #9", Utilities.isHtmlEntity("&#x2GG;"));
+		assertTrue("Invalid HTML entity test #10", Utilities.isHtmlEntity("&#xffff;"));
+		assertTrue("Invalid HTML entity test #11", Utilities.isHtmlEntity("&#xfffff;"));
+		assertFalse("Invalid HTML entity test #12", Utilities.isHtmlEntity("&#xffffff;"));
+	}
+
+	/**
+	 *
+	 */
 	@Test(expected=NullPointerException.class)
 	public void testFormatMessageThrowsNullPointerException() throws Throwable {
 		Utilities.formatMessage("testUtilitiesKey", null);
