@@ -1,4 +1,0 @@
-<!-- test valid HTML entities to ensure that they are not double-escaped -->
-&#39;
-
-&lt;
